[package]
name = "h3-testserver"
description = "Very basic file server with http 1, 2, 3 to test h3"
version = "0.0.0"
authors = ["Jean-Christophe BEGUE <jc.begue@pm.me>"]
edition = "2021"
default-run = "server"

[dependencies]
async-stream = "0.3"
hyper = { version = "0.14", features = ["full"]}
bytes = "1"
futures = "0.3"
futures-util = "0.3"
h3 = { path = "../h3/h3" }
h3-quinn = { path = "../h3/h3-quinn" }
http = "0.2"
quinn = "0.8.0"
quinn-proto = "0.8.0"
rcgen = { version = "0.7.0" }
rustls-native-certs = "0.6"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
rustls-pemfile = "0.2.1"
structopt = "0.3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "io-std", "io-util", "fs"] }
tokio-rustls = "0.23"
tracing = "0.1.10"
tracing-subscriber = { version = "0.2.7", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }

[[bin]]
name = "read_pem"
path = "src/bin/read_pem.rs"

[[bin]]
name = "server"
path = "src/main.rs"
